infra/templates/02-security-groups.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
  MyBookStore - Stack 02: Security Groups
  SG-alb (entrada publica 80/443), SG-eks (ALB + intra-cluster).
  Sin Bastion Host - acceso admin desde maquina local.

Parameters:
  ProjectName:
    Type: String
    Default: bookstore

Resources:

  # SG ALB - acepta trafico HTTP/HTTPS desde Internet
  SGAlb:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${ProjectName}-sg-alb"
      GroupDescription: Trafico publico HTTP y HTTPS hacia el ALB
      VpcId: !ImportValue
        Fn::Sub: "${ProjectName}-VpcId"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: "0.0.0.0/0"
          Description: HTTP publico
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: "0.0.0.0/0"
          Description: HTTPS publico
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: "0.0.0.0/0"
          Description: Salida libre ALB
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-sg-alb"

  # SG EKS - trafico desde ALB + comunicacion intra-cluster
  SGEks:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${ProjectName}-sg-eks"
      GroupDescription: Trafico pods EKS desde ALB e intra-cluster
      VpcId: !ImportValue
        Fn::Sub: "${ProjectName}-VpcId"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5001
          ToPort: 5003
          SourceSecurityGroupId: !Ref SGAlb
          Description: Microservicios desde ALB
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref SGAlb
          Description: HTTP desde ALB
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref SGAlb
          Description: HTTPS desde ALB
        - IpProtocol: "-1"
          SourceSecurityGroupId: !Ref SGEks
          Description: Comunicacion interna EKS intra-cluster
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: "0.0.0.0/0"
          Description: Salida libre pods via NAT
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-sg-eks"

Outputs:
  SGAlbId:
    Value: !Ref SGAlb
    Export:
      Name: !Sub "${ProjectName}-SGAlbId"

  SGEksId:
    Value: !Ref SGEks
    Export:
      Name: !Sub "${ProjectName}-SGEksId"
